# open-responses

./: Cargo.toml  feedback.md  openapi.json
examples/: create_response.rs
scripts/: update_openapi.py  update_openapi.sh  validate_models.py
src/: client.rs  content.rs  enums.rs  errors.rs  functions.rs  lib.rs  logprobs.rs  messages.rs  parameters.rs  reasoning.rs  response.rs  response_format.rs  streaming_events.rs  tokens.rs  tools.rs  unions.rs
src/client/: core.rs  error.rs  mode.rs  request.rs  stream.rs
