[package]
name = "open-responses"
version = "0.0.0"
edition = "2021"

[features]
default = []
client = [
  "dep:bon",
  "dep:futures-core",
  "dep:reqwest",
  "dep:secrecy",
  "dep:thiserror",
  "dep:tokio",
  "dep:tracing",
  "dep:url",
]

[dependencies]
bon = { version = "3.6.3", optional = true }
futures-core = { version = "0.3.32", optional = true }
reqwest = { version = "0.12.23", features = ["json", "stream"], optional = true }
secrecy = { version = "0.10.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { version = "2.0.12", optional = true }
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "sync"], optional = true }
tracing = { version = "0.1.41", optional = true }
url = { version = "2.5.4", optional = true }

[[example]]
name = "create_response"
required-features = ["client"]
